# von-neumann

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  release.yml
example/: array_sum.vnm  sum_double.vnm
include/: cli_parser.hpp  error_reporter.hpp  instruction.hpp  instruction_map.hpp  instruction_mappings.hpp  interpreter.hpp  machine.hpp  memory.hpp  mode.hpp  mode_map.hpp  printer_interface.hpp  token.hpp  word.hpp
include/parsing/: cli_parser.hpp  error.hpp  error_reporter.hpp  interpreter.hpp  line_interpreter.hpp  scanner.hpp  token.hpp
include/print/: binary.hpp  normal.hpp  printer.hpp  printer_interface.hpp
include/printing/: binary.hpp  file_printer.hpp  normal.hpp  printer.hpp  with_sign.hpp
src/: CMakeLists.txt  cli_parser.cpp  cxxopts.hpp  error_reporter.cpp  instruction_mappings.cpp  instruction_mappings.hpp  interpreter.cpp  interpreter.hpp  machine.cpp  machine.hpp  main.cpp  memory.cpp  memory.hpp  scanner.cpp  token.hpp  word.cpp  word.hpp
src/parsing/: cli_parser.cpp  error.cpp  error_reporter.cpp  interpreter.cpp  line_interpreter.cpp  scanner.cpp
src/print/: binary.cpp  normal.cpp  with_sign.cpp
src/printing/: binary.cpp  normal.cpp  with_sign.cpp
test/: CMakeLists.txt  interpreter_test.cpp  machine_test.cpp  memory_test.cpp  word_test.cpp
